1999-07-25  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-match-string): New function.
	(po-set-msgid): Use it.
	(po-set-msgstr): Likewise.
	(po-set-comment): Likewise.
	(po-ensure-source-references): Likewise.
	(po-guess-archive-name): Likewise.
	(po-guess-team-address): Likewise.

2000-08-11  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el: Move blocks of code around in view of later patches.
	Do minor cosmetic changes.  Correct name-buffer into buffer-name
	whenever needed.  Remove one case of spurious testing code.
	Borrow the marking overlay if possible, do not creating a new one.

2000-01-24  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el: Split portability matters in two.  A minimum for
	customisation to work, and the rest after the customisation page.
	Reported by Martin v. Löwis.

2000-01-17  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el: To avoid compilation diagnostics, move customisation
	before portability matters and add some variable declarations.

1998-09-07  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el: Merge make-local-variable within set whenever possible.

2001-07-11  Bruno Haible  <haible@clisp.cons.org>

	* po-mode.el (po-default-file-header): Replace 8-bit with 8bit.

2001-07-06  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-msgfmt-version-check): Check for version strings with
	a single dot (e.g. 0.11) correctly.

2001-07-08  Karl Eichwalder  <ke@suse.de>

	* po-mode.el: Don't recommend to use po-mode for POT files.
	(po-find-charset): New function.
	(po-find-file-coding-system-guts): Use it to get rid of the 4096 limit.
	If no charset found, use "none".

2001-07-07  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-compute-counters): Don't count the header entry.
	Reported by Bernd Schandl.

2001-07-01  Bruno Haible  <haible@clisp.cons.org>

	* po-mode.el (po-content-type-charset-alist): Add entries for
	ISO-8859-15, GB2312, EUC-JP, EUC-KR, BIG5, SHIFT_JIS, TIS-620, VISCII.
