@@ -1,3 +1,8 @@
+2001-08-13  François Pinard  <pinard@iro.umontreal.ca>
+
+	* po-mode.el (po-mode): Issue message after running hooks rather than
+	before, augmenting the chances that the message does not get erased.
+
 1999-07-25  François Pinard  <pinard@iro.umontreal.ca>
 
 	* po-mode.el (po-match-string): New function.
